<resources>
    <string name="app_name">XTalk</string>

    <string name="menu_conversation">聊天</string>
    <string name="menu_conversation_list">聊天列表</string>
    <string name="menu_sub_conversation_list">聚合聊天列表</string>
    <string name="title_activity_login">登陆</string>

    <string name="welcome">欢迎使用XTalk</string>

    <string name="user_account">用户名</string>
    <string name="user_password">密码</string>

    <string name="login_hint_account">填入用户名</string>
    <string name="login_hint_password">填入用户密码</string>

    <string name="login_btn_in">登陆</string>

</resources>
