<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bigx.app.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/user_account"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/login_hint_account"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:inputType="text"
            android:background="@null" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/user_password"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/login_hint_password"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:inputType="textPassword"
            android:background="@null" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"/>

    <Button
        android:id="@+id/login_btn_in"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="#3F5185"
        android:text="@string/login_btn_in"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"/>

</LinearLayout>
